--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Natalia Tarasik",
   "license": "ISC",
   "devDependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
+    "@fancyapps/ui": "^4.0.27",
     "browser-sync": "^2.27.9",
     "del": "^6.0.0",
     "gulp": "^4.0.2",
@@ -17,14 +19,12 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-uglify-es": "^3.0.0",
-    "inputmask": "^5.0.7",
+    "jquery": "^3.6.0",
+    "mixitup": "^3.3.1",
     "sass": "^1.50.1",
-    "swiper": "^8.3.2"
+    "slick-carousel": "^1.8.1"
   },
   "dependencies": {
-    "choices.js": "^10.1.0",
-    "jquery": "^3.6.0",
-    "micromodal": "^0.4.10",
-    "readmore-js": "^3.0.0-beta-1"
+    "swiper": "^8.3.2"
   }
 }
